# Vehicle-Insurance-End-to-End-MLOps-Project

./: .gitignore  demo.py  main.py  pyproject.toml  requirements.txt  template.py
config/: model.yaml  schema.yaml
notebook/: experiment.ipynb  mongoDB_demo.ipynb  rf_model.pkl
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: insurance_data.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py
src/logger/: __init__.py
src/pipline/: training_pipeline.py
src/utils/: main_utils.py
