[project]
name = "src"
version = "0.1.0"
description = "vehicle-insurance-end-to-end-mlops-project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pymongo[srv]>=4.13.2",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
]
